resolves layout and spacing bugs across screen sizes

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,6 +1,39 @@
 /* you can put styles in here :) */
 
-footer{
+/* global layout and styles */
+
+body {
+    color: #FFE9D9;
+    font-size: 18px;
+    font-family: "Raleway", sans-serif;
+    background-color: #D8392F;
+    text-transform: uppercase;
+    margin: 0%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-feature-settings: "kern" on, "liga" on;
+    -moz-font-feature-settings: "kern" on, "liga" on;
+    -webkit-font-feature-settings: "kern" on, "liga" on;
+    -ms-font-feature-settings: "kern" on, "liga" on;
+    -o-font-feature-settings: "kern" on, "liga" on;
+}
+
+header,
+main,
+footer,
+body {
+    width: 100vw;
+    max-width: 100vw;
+}
+
+body,
+html {
+    overflow-x: hidden;
+}
+
+footer {
     background-color: #D8392F;
     font-family: "Raleway", sans-serif;
     color: #FFE9D9;
@@ -12,127 +45,180 @@ footer{
     align-items: center;
 }
 
-h1{
+main {
+    width: 90vw;
+}
+
+
+
+
+
+/* header/nav */
+
+header a {
+    color: #D8392F;
+}
+
+.scallop::after {
+    position: absolute;
+    bottom: -50px;
+    left: 0px;
+    width: 100%;
+    content: " ";
+    background:
+        radial-gradient(circle at 50% 0%, #FFE9D9 25%, #d83a2f00 26%, #d83a2f00 40%);
+    background-color: #d83a2f00;
+    background-size: 50px 100px;
+    height: 50px;
+    background-repeat: repeat-x;
+}
+
+.after-scallop {
+    background: #D8392F;
+    margin-bottom: 50px;
+}
+
+/*
+.after-scallop p {
+    font-size: 18px;
+    margin-top: 0%;
+    width: 100%;
+} */
+
+header a:visited,
+header a:active {
+    text-decoration: none;
+}
+
+
+/* footer */
+
+.insta {
+    padding: 5%;
+}
+
+
+/*type */
+h1 {
     color: #FFE9D9;
     font-family: "Elsie", serif;
     text-transform: none;
     font-weight: 400;
     font-style: normal;
-    font-size: 155px;
+    font-size: 100px;
     padding: 0%;
+    margin-top: 0;
     margin-bottom: 1.5%;
-    margin-top: 300px;
     letter-spacing: -5px;
 }
-.red-font{
+
+.red-font {
     color: #D8392F;
 }
-.scallop::after { 
-    position:absolute;
-    bottom: -50px;
-    left: 0px;
-    width: 100%;
-    content:" ";
-    background: 
-    radial-gradient(circle at 50% 0%, #FFE9D9 25%, #d83a2f00 26%, #d83a2f00 40%);
-    background-color:  #d83a2f00;
-    background-size:50px 100px;
-    height:50px;
-    background-repeat: repeat-x;
-  }
-  .after-scallop{
-    background: #D8392F;
-    margin-bottom:50px;
-  }
 
-h2{
+
+h2 {
     color: #FFE9D9;
     font-family: "Elsie", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 75px;
+    font-size: 55px;
     text-transform: none;
     letter-spacing: -2px;
 }
 
-body{
-    color: #FFE9D9;
-    font-size: 18px;
-    font-family: "Raleway", sans-serif;
-    background-color: #D8392F;
-    text-transform: uppercase;
-    margin: 0%;
-    text-align: center;
-    font-feature-settings: "kern" on, "liga" on; 
-    -moz-font-feature-settings: "kern" on, "liga" on; 
-    -webkit-font-feature-settings: "kern" on, "liga" on; 
-    -ms-font-feature-settings: "kern" on, "liga" on; 
-    -o-font-feature-settings: "kern" on, "liga" on;
-}
-
-#featuredWork{
-    background-color: #FFE9D9;
-    padding: 25px;
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-}
-.featuredIMG{
-    height: 600px;
-    border: 20px solid #FFE9D9;
-}
-.profile{
-    height: 650px;
-    margin-top: 120px;
-    border-top:#FFE9D9 30px solid;
-    border-bottom:#FFE9D9 110px solid;
-    border-left:#FFE9D9 30px solid;
-    border-right:#FFE9D9 30px solid;
-    box-shadow: 0px 10px 6px 0px rgba(84, 28, 28, 0.35);
-}
-.profile:hover{
-    transform: rotate(8deg);
-  }
-
-.after-scallop p{
-    font-size: 18px;
-    margin-bottom: 320px;
-    margin-top: 0%;
-}
-.insta{
-    padding: 5%;
-}
-.envelope{
-    width:250px;
-    margin:0;
-}
-
-a:link { 
-    text-decoration: none; 
-} 
-a:visited { 
-    text-decoration: none; 
-} 
-a:hover { 
-    text-decoration: none; 
-} 
-a:active { 
-    text-decoration: none; 
-}
 a {
     color: #FFE9D9;
     text-decoration: none;
 }
-work:img {
-    width: 375;
-    height: 300;
+
+p {
+    width: 100%;
 }
-#contact-box{
+
+/* home page */
+
+.home {
+    align-items: flex-start;
+}
+
+.home main {
+    width: 100vw;
+}
+
+#featuredWork {
+    background-color: #EA897C;
+    padding: 25px;
+    display: flex;
+    flex-wrap: nowrap;
+    column-gap: 30px;
+    overflow-x: scroll;
+}
+
+.featuredIMG {
+    height: 50vh;
+}
+
+/* about page */
+
+.about #main-content div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.profile {
+    width: 70vw;
+    max-width: 500px;
+    border-top: #FFE9D9 30px solid;
+    border-bottom: #FFE9D9 110px solid;
+    border-left: #FFE9D9 30px solid;
+    border-right: #FFE9D9 30px solid;
+    box-shadow: 0px 10px 6px 0px rgba(84, 28, 28, 0.35);
+}
+
+.profile:hover {
+    transform: rotate(8deg);
+}
+
+.about-me-section {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: left;
+    padding: 30px;
+    width: 90%;
+    max-width: 500px;
+}
+
+.about p {
+    text-align: left;
+}
+
+
+
+
+.about h1 {
+    margin-bottom: 0px;
+    margin-top: 0;
+}
+
+
+/* contact page */
+.envelope {
+    width: 250px;
+    margin: 0;
+}
+
+
+
+
+#contact-box {
     background-color: #FFE9D9;
-    border-top:#FFE9D9 30px solid;
-    border-bottom:#FFE9D9 110px solid;
-    border-left:#FFE9D9 30px solid;
-    border-right:#FFE9D9 30px solid;
+    border-top: #FFE9D9 30px solid;
+    border-bottom: #FFE9D9 110px solid;
+    border-left: #FFE9D9 30px solid;
+    border-right: #FFE9D9 30px solid;
     box-shadow: 0px 10px 6px 0px rgba(84, 28, 28, 0.35);
     display: flex;
     flex-wrap: wrap;
@@ -146,11 +232,13 @@ work:img {
 
 #Publish1FAIpQLSe9dssDNsiaOXK1BNuvZeFe6xxyCh2tlQw6nSA5-xKSsKoKtg {
     background: transparent !important;
-}       
+}
 
-a.ff-powered-img img, img.ff-banner-image.ff-image {
+a.ff-powered-img img,
+img.ff-banner-image.ff-image {
     visibility: hidden;
-    display: none;;
+    display: none;
+    ;
 }
 
 .ff-title {
@@ -159,15 +247,50 @@ a.ff-powered-img img, img.ff-banner-image.ff-image {
 }
 
 #ff-compose {
-    --ff-paragraph-font:  "Raleway", sans-serif !important;
+    --ff-paragraph-font: "Raleway", sans-serif !important;
     --ff-primary-700: #D8392F;
     --ff-field-bgcolor: rgb(255 255 255 / 50%);
     width: 80%;
     max-width: 642px;
 }
 
+/* work page */
+.work main img {
+    width: 375px;
+    height: auto;
+}
+
+
 @media (min-width:1080px) {
+
+    /* desktop only */
     #contact-box {
         flex-wrap: nowrap;
+    }
+
+    h1 {
+        font-size: 155px;
+        margin-top: 300px;
+    }
+
+    h2 {
+        font-size: 75px;
+    }
+
+    .after-scallop p {
+        margin-bottom: 30vh;
+    }
+
+    main {
+        max-width: 1400px;
+    }
+
+}
+
+@media (max-width:400px) {
+
+    /* mobile only */
+    #featuredWork {
+        width: 110vw;
     }
 }
